broken, but im tired